# 42_School

./: CMakeLists.txt  README.md
Common_Core/Libft/: CMakeLists.txt  README.md  ian_tester.sh
Common_Core/Libft/libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_striteri.c  ft_strjoin.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  libft.h
Common_Core/Printf/: ft_valid_input.c
Common_Core/Printf/ft_printf/: Makefile  ft_itoa.c  ft_long_to_hex.c  ft_print_chars.c  ft_print_n_string.c  ft_print_numbers.c  ft_printf.c  ft_printf.h  ft_string_manipulation.c  ft_utils.c
Common_Core/Printf/ft_printf_tester/: Makefile
Common_Core/Printf/noob_ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_put_characters.c  ft_put_numbers.c
Piscine/C02/ex10/: ft_strlcpy.c
Piscine/C03/ex05/: ft_strlcat.c
Piscine/C05/ex00/: ft_iterative_factorial.c
Piscine/C05/ex01/: ft_recursive_factorial.c
Piscine/C05/ex02/: ft_iterative_power.c
Piscine/C05/ex03/: ft_recursive_power.c
Piscine/C05/ex04/: ft_fibonacci.c
Piscine/C05/ex06/: ft_is_prime.c
Piscine/C05/ex07/: ft_find_next_prime.c
Piscine/C09/ex00/: ft_strcmp.c
Piscine_Reload/ex08/: ft_is_negative.c
Piscine_Reload/ex09/: ft_ft.c
Piscine_Reload/ex11/: ft_div_mod.c
Piscine_Reload/ex12/: ft_iterative_factorial.c
Piscine_Reload/ex13/: ft_recursive_factorial.c
Piscine_Reload/ex14/: ft_sqrt.c
Piscine_Reload/ex16/: ft_strlen.c
Piscine_Reload/ex20/: ft_strdup.c
Piscine_Reload/ex21/: ft_range.c
Piscine_Reload/ex24/srcs/: ft_strcmp.c  ft_strlen.c  ft_swap.c
Piscine_Reload/ex25/: ft_foreach.c
Piscine_Reload/ex26/: ft_count_if.c
Piscine_Retry/C00/ex04/: ft_is_negative.c
Piscine_Retry/C00/ex07/: ft_putnbr.c
Piscine_Retry/C00/ex08/: ft_print_combn.c
Piscine_Retry/C01/ex07/: ft_rev_int_tab.c
Piscine_Retry/C01/ex08/: ft_sort_int_tab.c
Piscine_Retry/C02/ex00/: ft_strcpy.c
Piscine_Retry/C02/ex01/: ft_strncpy.c
Piscine_Retry/C02/ex02/: ft_str_is_alpha.c
Piscine_Retry/C02/ex03/: ft_str_is_numeric.c
Piscine_Retry/C02/ex04/: ft_str_is_lowercase.c
Piscine_Retry/C02/ex05/: ft_str_is_uppercase.c
Piscine_Retry/C02/ex06/: ft_str_is_printable.c
Piscine_Retry/C02/ex07/: ft_strupcase.c
Piscine_Retry/C02/ex08/: ft_strlowcase.c
Piscine_Retry/C02/ex09/: ft_strcapitalize.c
Piscine_Retry/C02/ex10/: ft_strlcpy.c
Piscine_Retry/C03/ex00/: ft_strcmp.c
Piscine_Retry/C03/ex01/: ft_strncmp.c
Piscine_Retry/C03/ex02/: ft_strcat.c
Piscine_Retry/C03/ex03/: ft_strncat.c
Piscine_Retry/C03/ex04/: ft_strstr.c
Piscine_Retry/C03/ex05/: ft_strlcat.c
Piscine_Retry/C04/ex00/: ft_strlen.c
Piscine_Retry/C04/ex01/: ft_putstr.c
Piscine_Retry/C04/ex02/: ft_putnbr.c
Piscine_Retry/C04/ex03/: ft_atoi.c
Piscine_Retry/C04/ex04/: ft_putnbr_base.c
Piscine_Retry/C04/ex05/: ft_atoi_base.c
Piscine_Retry/C05/ex00/: ft_iterative_factorial.c
Piscine_Retry/C05/ex01/: ft_recursive_factorial.c
Piscine_Retry/C05/ex02/: ft_iterative_power.c
(+56 files in other folders)
